WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260494
grid-template not serialized correctly if grid-template-areas was not set from shorthand
https://bugs.webkit.org/show_bug.cgi?id=260494
Summary
grid-template not serialized correctly if grid-template-areas was not set fro...
Sammy Gill
Reported
2023-08-21 16:28:51 PDT
ShorthandSerializer::serializeGridTemplate bails out early if it has to serialize the third version of the shorthand ([ <line-names>? <string> <track-size>? <line-names>? ]+ [ / <explicit-track-list> ]?) and the values were not set from the shorthand. We should be checking these values directly and see if they can be represented in this syntax
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-21 16:29:19 PDT
<
rdar://problem/114224504
>
Sammy Gill
Comment 2
2023-08-21 17:13:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16909
Sammy Gill
Comment 3
2023-08-22 15:17:15 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/41592
EWS
Comment 4
2023-08-22 16:01:33 PDT
Committed
267155@main
(74849b01b119): <
https://commits.webkit.org/267155@main
> Reviewed commits have been landed. Closing PR #16909 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug