Cherry-pick 74849b01b119. rdar://115862393

Directly check values of grid-template-rows and grid-template-columns when serializing grid-template with grid areas
    https://bugs.webkit.org/show_bug.cgi?id=260494
    rdar://114224504

    Reviewed by Tim Nguyen.

    The grid-template shorthand has two different options for its syntax:
    - [ <'grid-template-rows'> / <'grid-template-columns'> ]
    - [ <line-names>? <string> <track-size>? <line-names>? ]+ [ / <explicit-track-list> ]?

    In the latter version of the syntax, ShorthandSerializer would bail out
    early (and not serialize any values) if grid-template-areas (the <string>
    portion of the syntax) was not set by the grid-template shorthand. We
    should instead check the values of grid-template-rows and grid-template-columns
    directly to see if they can be expressed inside of this shorthand.

    For the rows portion we build up the shorthand iteratively, so we can
    just check if the value is a valid <track-size> and return an empty
    string if it is not since that would mean the value could not be
    expressed in the shorthand. A value being a valid <track-size> means that
    it must be one of: minmax(), fit-content(), length-percentage, flex,
    min-content, max-content, or auto. If it is not one of these then the
    value is not a <track-size>.

    For the columns portion we have to check the entire value of grid-template-columns
    beforehand since we will end up appending the whole value to the end
    of the shorthand. To check to see if a value is a valid <explicit-track-list>,
    we need to make sure the value contains only <line-names>s and <track-size>s
    with at least one <track-size> in the value.

    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-shorthand-areas-valid-expected.txt:
    * LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-template-shorthand-valid.html:
    * Source/WebCore/css/ShorthandSerializer.cpp:
    (WebCore::ShorthandSerializer::commonSerializationChecks):
    (WebCore::ShorthandSerializer::serializeGridTemplate const):
    * Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
    (WebCore::CSSPropertyParserHelpers::isGridBreadthIdent):
    (WebCore::CSSPropertyParserHelpers::consumeGridBreadth):
    * Source/WebCore/css/parser/CSSPropertyParserHelpers.h:

    Canonical link: https://commits.webkit.org/267155@main
Identifier: 265870.602@safari-7616.2.9.11-branch